Fixes Issue 401 (erroneous computation of arguments in the wrong scope). Provides the first elements of a refoundation of grid species in order to reduce the memory used in large grids and to improve the execution time.
git-svn-id: https://gama-platform.googlecode.com/svn/branches/GAMA_CURRENT@6551 b91ef52e-2b48-11df-9ab6-b1cdc0d4a89a